# board_game_ros

./: .gitignore  CMakeLists.txt  README.md
launch/: make_img.launch  test.launch
quarto_description/: CMakeLists.txt  README.md  package.xml
quarto_description/src/: img_interface_select_pin.cpp  img_test.cpp  making_img.cpp  test_img_interface_select_pin.cpp  test_making_img.cpp
quarto_launcher/: CMakeLists.txt  README.md  package.xml
quarto_launcher/launch/: make_img.launch  test.launch
quarto_making_img/: CMakeLists.txt  package.xml
quarto_making_img/src/: quarto_making_img.cpp
quarto_msg_generator/: CMakeLists.txt  README  README.md  package.xml
src/: test.cpp
src/quarto/: CMakeLists.txt  README.md  package.xml
src/quarto/include/: img_test.hpp
src/quarto/launch/: img_test.launch  making_test.launch  quarto.launch  select_spot.launch  test.launch  test_img_interface.launch
src/quarto/src/: img_interface_select_pin.cpp  img_test.cpp  making_img.cpp  select_pin_server.cpp  test_img_draw.cpp  test_img_interface_select_pin.cpp  test_making_img.cpp  topic_select_spot.cpp
srv/: bridge.srv
