<?xml version="1.0"?>
<package format="2">
  <name>quarto_making_img</name>
  <version>0.0.0</version>
  <description>The quarto_making_img package</description>

  <maintainer email="tamura-kosei905@mail.kyutech.jp">tamura kosei</maintainer>
  <author email="tamura.kosei905@mail.kyutech.jp">tamura kosei</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export></export>

</package>
