<?xml version="1.0"?>
<package format="2">
  <name>quarto</name>
  <version>1.0.0</version>
  <description>The quarto package</description>

  <maintainer email="tamura-kosei@mail.kyutech.jp">Kose-i</maintainer>
  <author email="tamura.kosei905@mail.kyutech.jp">Tamura Kosei</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>opencv2</depend>

  <export></export>

</package>
